[project]
name = "litellm-benchmark"
version = "0.1.0"
description = "Benchmark tool for LiteLLM proxy installations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.0",
    "tqdm>=4.0",
    "pandas>=2.0",
    "seaborn>=0.13",
    "matplotlib>=3.8",
]

[project.scripts]
litellm-benchmark = "main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.9",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "pandas-stubs>=2.0",
    "pip-audit>=2.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
markers = ["integration: requires a running local Ollama instance"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
